# gpu-python

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  index.html  index.qmd  listings.json  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
_site/: index.html  search.json  sitemap.xml
gpu_python/: _modidx.py
internal/: A_Practitioners_Guide_to_Triton.html
nbs/: index.ipynb  nbdev.yml
posts/gpu-puzzles-with-triton/: gpu-puzzles-triton.html  gpu-puzzles-triton.ipynb
posts/post-with-code/: index.html  index.qmd
posts/welcome/: index.html  index.qmd
src/gpu_python/: gpu_puzzles_utils.py  triton_utils.py
