[project]
name = "gpu-python"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nok Lam Chan", email = "mediumnok@gmail.com"},
]
dependencies = [
    "quarto>=0.1.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
